--- a/frontend/src/_variables.scss
+++ b/frontend/src/_variables.scss
@@ -1,1 +1,6 @@
 $box-shadow: 5px 5px 20px -5px rgba(black, 0.2);
+
+$mobile-width: 450px;
+$tablet-width: 780px;
+$large-display-width: 950px;
+$extra-large-display-width: 1300px;
